--- a/index.html
+++ b/index.html
@@ -527,19 +527,7 @@
       <!-- 카드 1 -->
       <li class="promise">
         <div class="promise__icon" aria-hidden="true">
-          <!-- 타겟 아이콘 (SVG) -->
-          <svg viewBox="0 0 64 64" width="88" height="88">
-            <defs>
-              <linearGradient id="g1" x1="0" x2="1">
-                <stop offset="0" stop-color="#9ecbff"/>
-                <stop offset="1" stop-color="#5aa0ff"/>
-              </linearGradient>
-            </defs>
-            <circle cx="32" cy="32" r="30" fill="url(#g1)" opacity="0.35"/>
-            <circle cx="32" cy="32" r="20" fill="url(#g1)" opacity="0.55"/>
-            <circle cx="32" cy="32" r="10" fill="#2f6fe4"/>
-            <path d="M32 6v10M32 48v10M6 32h10M48 32h10" stroke="#2f6fe4" stroke-width="3" stroke-linecap="round"/>
-          </svg>
+          <img src="./img/pro001.png" alt="맞춤 상담 아이콘" />
         </div>
         <h3 class="promise__title">1:1 맞춤 전문상담</h3>
         <p class="promise__desc">
@@ -550,17 +538,7 @@
       <!-- 카드 2 -->
       <li class="promise">
         <div class="promise__icon" aria-hidden="true">
-          <!-- 전문가 아이콘 -->
-          <svg viewBox="0 0 64 64" width="88" height="88">
-            <defs>
-              <linearGradient id="g2" x1="0" x2="1">
-                <stop offset="0" stop-color="#b9e0ff"/>
-                <stop offset="1" stop-color="#6fb6ff"/>
-              </linearGradient>
-            </defs>
-            <circle cx="32" cy="20" r="10" fill="url(#g2)"/>
-            <rect x="14" y="34" width="36" height="20" rx="8" fill="#2f6fe4" opacity=".9"/>
-          </svg>
+          <img src="./img/pro002.png" alt="원스톱 프로세스 아이콘" />
         </div>
         <h3 class="promise__title">ONE-STOP 프로세스</h3>
         <p class="promise__desc">
@@ -571,17 +549,7 @@
       <!-- 카드 3 -->
       <li class="promise">
         <div class="promise__icon" aria-hidden="true">
-          <!-- 품질 뱃지 -->
-          <svg viewBox="0 0 64 64" width="88" height="88">
-            <defs>
-              <linearGradient id="g3" x1="0" x2="1">
-                <stop offset="0" stop-color="#b6caff"/>
-                <stop offset="1" stop-color="#6a8bff"/>
-              </linearGradient>
-            </defs>
-            <path d="M32 8l8 8h8l-4 10 6 8-10 2-8 10-8-10-10-2 6-8-4-10h8z" fill="url(#g3)"/>
-            <circle cx="32" cy="28" r="8" fill="#ffd34d"/>
-          </svg>
+          <img src="./img//pro003.png" alt="최대한도 자금 확보 아이콘" />
         </div>
         <h3 class="promise__title">최대한도 자금 확보</h3>
         <p class="promise__desc">
