--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
     <h2 id="promises-title" class="section__title">정책자금 솔루션<br>간편한 신청절차</h2>
-    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡함 없이 빠르게 만나보세요.</p>
+    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
   </div>
 
   <div class="section__body">
