--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- 우측 메뉴 -->
     <nav id="nav-menu" class="nav__menu" aria-label="상단 메뉴">
       <a class="nav__link" href="#testimonial">성공사례</a>
-      <a class="nav__link" href="#proccess">신청절차</a>
+      <a class="nav__link" href="#proccess">간편절차</a>
       <a class="nav__link" href="#contact">무료상담</a>
     </nav>
   </div>
@@ -518,7 +518,7 @@
 <section class="section promises"  id="proccess" aria-labelledby="promises-title">
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
-    <h2 id="promises-title" class="section__title">정책자금 솔루션<br>간편한 신청절차</h2>
+    <h2 id="promises-title" class="section__title">정책자금 솔루션<br>간편한 절차</h2>
     <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
   </div>
 
