--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <!-- 외부 CSS -->
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="css/ionicons.min.css"  /> <!--개인정보 팝업 닫기버튼-->
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 
 <body>
@@ -20,7 +22,7 @@
   <div class="container nav__inner">
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
-      <strong>정책자금 솔루션</strong>
+      <strong>중소기업 비즈니스 혁신센터</strong>
     </a>
 
     <!-- 모바일 햄버거 -->
@@ -102,7 +104,7 @@
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
     <h1 class="section__title">5,234건 승인 성공사례!<br>수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
-    <p class="section__desc">함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <p class="section__desc">CBIC(중소기업 비즈니스 혁신센터)와 함께한 대표님들의 리얼 후기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
@@ -699,162 +701,163 @@
 </section>
 
 <!--섹션5 끝 -->
-
-<!--섹션6 시작 -->
-<!-- ===================== -->
-<!-- Section 6 · Lead Form -->
-<!-- ===================== -->
-<section class="section leadform" id="contact" aria-labelledby="leadform-title">
-  <!-- 흐릿 사진 + 오버레이 -->
-  <div class="leadform__bg" aria-hidden="true"></div>
-
-  <div class="leadform__wrap">
-    <header class="leadform__head">
-      <p class="leadform__count" style="font-size: 18px;">오늘 최대한도&최저금리<br>무료진단 받으신 대표님
-        <strong id="today-count">0</strong>명
-      </p>
-      <h2 id="leadform-title" class="leadform__title">정책자금 솔루션 무료상담 신청</h2>
-      <p class="leadform__desc" style="font-size: 18px;">
-        대표님 회사에 큰 도움이 될수있게<br>
-        언제나 <span style="color: #ffe600;"><b>최대한도, 최저금리</b></span>를 목표로 합니다.<br>
-        <span style="color: #ffe600;"><b>97%의 높은 승인율</b></span>을 자랑하는 전문 컨설턴트의<br>
-        정책자금 솔루션 맞춤상담으로 <br>사업 자금을 확실하게 마련하세요. 
-      </p><br>
-    </header>
-
-    <!-- 카드형 폼 -->
-    <form class="leadform__card" id="consult-form" novalidate>
-  <div class="lf__grid">
-    <!-- 1. 이름 -->
-    <div class="lf__field">
-      <label for="name" class="lf__label">이름</label>
-      <input id="name" name="name" type="text" class="lf__input" placeholder="이름을 입력해주세요" required />
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 2. 연락처 -->
-    <div class="lf__field">
-      <label for="phone" class="lf__label">연락처</label>
-      <input id="phone" name="phone" type="tel" inputmode="numeric" class="lf__input" placeholder="숫자만 입력해주세요" required />
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 3. 사업자등록번호 -->
-    <div class="lf__field">
-      <label for="bizno" class="lf__label">사업자등록번호</label>
-      <input id="bizno" name="bizno" type="text" inputmode="numeric" class="lf__input"
-             placeholder="예) 123-45-67890" pattern="^\d{3}-\d{2}-\d{5}$" required />
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 4. 사업자명 -->
-    <div class="lf__field">
-      <label for="bizname" class="lf__label">사업자명</label>
-      <input id="bizname" name="bizname" type="text" class="lf__input" placeholder="사업자명을 입력해주세요" required />
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 5. 업종선택 -->
-    <div class="lf__field">
-      <label for="industry" class="lf__label">업종선택</label>
-      <select id="industry" name="industry" class="lf__select" required>
-        <option value="">업종을 선택해주세요</option>
-        <option>도소매업</option>
-        <option>제조업</option>
-        <option>통신판매업</option>
-        <option>서비스업</option>
-        <option>음식점업</option>
-        <option>IT개발업</option>
-        <option>기타</option>
-      </select>
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 6. 지역 -->
-    <div class="lf__field">
-      <label for="region" class="lf__label">지역</label>
-      <select id="region" name="region" class="lf__select" required>
-        <option value="">지역을 선택해주세요</option>
-        <option>경기</option>
-        <option>인천</option>
-      </select>
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 7. 연매출 -->
-    <div class="lf__field">
-      <label for="revenue" class="lf__label">연매출</label>
-      <select id="revenue" name="revenue" class="lf__select" required>
-        <option value="">연매출을 선택해주세요</option>
-        <option>3천만원 미만</option>
-        <option>1억미만</option>
-        <option>1~3억</option>
-        <option>3~5억</option>
-        <option>5~10억</option>
-        <option>10~20억</option>
-        <option>30~50억</option>
-        <option>50억이상</option>
-      </select>
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 8. 필요자금 -->
-    <div class="lf__field">
-      <label for="needfund" class="lf__label">필요자금</label>
-      <select id="needfund" name="needfund" class="lf__select" required>
-        <option value="">필요자금을 선택해주세요</option>
-        <option>1~3천만원</option>
-        <option>3~6천만원</option>
-        <option>6~9천만원</option>
-        <option>1~2억</option>
-        <option>2~3억</option>
-        <option>3~4억</option>
-        <option>4~7억</option>
-        <option>7~10억</option>
-        <option>10억이상</option>
-      </select>
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 9. 연체/국세체납여부 -->
-    <div class="lf__field">
-      <label for="arrears" class="lf__label">연체/국세체납여부</label>
-      <select id="arrears" name="arrears" class="lf__select" required>
-        <option value="">선택해주세요</option>
-        <option>O</option>
-        <option>X</option>
-      </select>
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 10. 신용점수 700점 이하 -->
-    <div class="lf__field">
-      <label for="credit700" class="lf__label">신용점수 700점 이하</label>
-      <select id="credit700" name="credit700" class="lf__select" required>
-        <option value="">선택해주세요</option>
-        <option>이상</option>
-        <option>이하</option>
-      </select>
-      <small class="lf__err" aria-live="polite"></small>
-    </div>
-
-    <!-- 동의 & 제출 -->
-    <div class="lf__agree lf__field--full">
-      <label class="lf__check">
-        <input type="checkbox" id="agree" required />
-        <span>개인정보 처리방침에 동의합니다.</span>
-      </label>
-      <a href="#" class="lf__policy" target="_blank" rel="noopener">[약관보기]</a>
-    </div>
-
-    <button class="lf__submit lf__field--full" type="submit">무료 상담 신청하기</button>
-  </div>
-</form>
-  </div>
-</section>
+<!--섹션6(입력폼) 시작 -->
+  <div id="form"></div>
 <!--섹션6 끝 -->
-</main>
 
+</main>
+<!-- ===================== -->
+<!-- Footer -->
+<!-- ===================== -->
+<footer class="site-footer" aria-labelledby="footer-title">
+  <h2 id="footer-title" class="sr-only">사이트 정보</h2>
+
+  <div class="container footer__inner">
+    <!-- 좌측: 로고/소개 -->
+    <div class="footer__brand">
+      <div class="footer__logo">
+        <span class="footer__logo-en">CBIC</span>
+        <span class="footer__logo-ko">중소기업 비즈니스 혁신센터</span>
+      </div>
+
+      <p class="footer__slogan">
+        업종별 맞춤 최대한도& 최저금리 승인전략을 제시하는<br>
+        검증된 정책자금 컨설팅 서비스
+      </p>
+    </div>
+
+    <!-- 우측: 사업자 정보 -->
+    <div class="footer__org" role="list">
+      <p class="footer__item" role="listitem"><span class="k">대표</span>김성환<span class="v"></span></p>
+      <p class="footer__item" role="listitem"><span class="k">주소</span><span class="v">서울 강서구 마곡중앙1로 14, 7층 710호</span></p>
+      <p class="footer__item" role="listitem"><span class="k">사업자등록번호</span><span class="v">872-04-02911</span></p>
+    </div>
+  </div>
+
+  <!-- 하단 바 -->
+  <div class="footer__bar">
+    <div class="container">
+      <p class="footer__copy">리코 코퍼레이션  © All Rights Reserved.</p>
+    </div>
+  </div>
+</footer>
+
+<!--개인정보처리방침-->
+<div id="privacy">
+        <div id="privacyContent">
+            <div class="titWrap">
+                    <span>개인정보취급방침</span>
+                <i style="margin-top:-14px !important" class="ion-close-circled closeBtn"></i>
+            </div>
+            <div style="line-height:1.2" class="conWrap">
+                개인정보의 수집 및 이용 동의(필수)<br><br>
+
+                1. 수집하는 개인정보의 항목 및 수집 목적<br><br>
+
+                (1) 개인정보 수집목적<br>
+                리코코퍼레이션은 이용자의 개인정보를 다음과 같은 목적으로 수집∙이용합니다.<br>
+                가. 회원으로 가입한 이용자를 식별하고 가입의사 및 나이 확인, 불량회원의 부정한 이용을 방지하기 위하여 사용합니다.<br>
+                나. 이용자에게 리코코퍼레이션의 다양한 서비스를 제공하고 서비스 이용 과정에서 이용자의 문의사항이나 불만을 처리하고 공지사항 등을 전달하기 위해 사용합니다.<br>
+                다. 이용자와 약속한 서비스를 제공하고 유료 서비스 구매 및 이용이 이루어지는 경우 이에 따른 요금 정산을 위해 사용됩니다.<br>
+                라. 신규 서비스가 개발되거나 이벤트 행사 시 참여기회를 알리기 위한 정보 전달 및 마케팅 및 광고 등에도 사용됩니다.<br>
+                마. 이용자의 서비스 이용 기록과 접속 빈도 분석 및 서비스 이용에 대한 통계, 이를 통한 맞춤형 서비스 제공과 서비스 개선에도 사용됩니다.<br>
+                바. 회사에 마케팅을 의뢰한 제3자의 광고, 상품소개 등 관련 광고문자 발송, 이벤트 행사 및 경품/쿠폰 관련 고객문의 응대에도 사용됩니다.<br><br>
+
+                (2) 수집하는 개인정보의 항목<br>
+                회사는 회원(또는 서비스) 가입, 원활한 고객상담, 각종 서비스의 제공 등을 위해 아래와 같은 최소한의 개인정보를 필수항목으로 수집하고 있습니다.<br>
+                가. 개인회원 가입시<br>
+                휴대전화번호, 이름, 이메일 주소가 수집될 수 있습니다.<br>
+                나. 광고서비스 제공 시<br>
+                이름, 휴대폰 전화번호, 이메일이 수집될 수 있습니다.<br>
+                다. 상담 서비스 이용 시<br>
+                서비스 품질 확인 및 개선을 위해 연락처 정보(발/수신 전화번호), 서비스 이용 기록(통화시간, 통화 내용 등)이 수집될 수 있습니다.<br>
+                라. 기타<br>
+                서비스 이용과정에서 아래와 같은 정보들이 자동으로 생성되어 수집될 수 있습니다.<br>
+                IP Address, 쿠키, 방문 일시, 서비스 이용 기록, 불량 이용 기록, 기기정보<br><br>
+
+                2. 개인정보 수집방법<br>
+                - 회사는 다음과 같은 방법으로 개인정보를 수집합니다.<br>
+                - 서비스 내 관련 페이지, 서면 양식, 팩스, 전화, 상담 게시판, 이메일, 이벤트 응모<br>
+                - 협력회사 및 수탁자로부터의 제공<br>
+                - 회사의 이벤트 안내 팝업 내 이용자가 직접 입력한 정보 수집<br><br>
+
+                3. 개인정보의 보유 및 이용기간<br>
+                리코코퍼레이션은 이용자의 개인정보를 회원가입을 하는 시점부터 서비스를 제공하는 기간 동안에만 제한적으로 이용하고 있습니다.<br>
+                이용자가 회원탈퇴를 요청하거나 제공한 개인정보의 수집 및 이용에 대한 동의를 철회하는 경우, 또는 수집 및 이용목적이 달성되거나 보유 및 이용기간이 종료한 경우 해당 이용자의 개인정보는 지체 없이 파기되며 다음 정보에 대해서는 아래의 사유로 일정기간 동안 저장됩니다.<br>
+                전자상거래 등에서의 소비자보호에 관한 법률, 통신비밀보호법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률 등 관계법령에 따라 보존할 필요가 있는 경우 회사는 관계법령에서 정한 기간 동안 고객의 개인정보를 보유하며, 그 기간은 다음과 같습니다.<br><br>
+
+                <table style="border: 1px solid black;">
+                <tr>
+                    <th style="border: 1px solid black;">보존근거</th>
+                    <th style="border: 1px solid black;">보존대상</th>
+                    <th style="border: 1px solid black;">보존기간</th>
+                </tr>
+                <tr>
+                    <th style="border: 1px solid black;"> 전자상거래 등에서의소비자 보호에 관한 법률 </th>
+                    <th style="border: 1px solid black;"> 대금결제 및 재화 등의 공급에 관한 기록 </th>
+                    <th style="border: 1px solid black;"> 5년 </th>
+                </tr>
+                <tr>
+                    <th style="border: 1px solid black;"> 전자상거래 등에서의소비자 보호에 관한 법률 </th>
+                    <th style="border: 1px solid black;"> 소비자의 불만 또는 분쟁처리에 관한 기록 </th>
+                    <th style="border: 1px solid black;"> 3년 </th>
+                </tr>
+		        <tr>
+                    <th style="border: 1px solid black;"> 전자상거래 등에서의소비자 보호에 관한 법률 </th>
+                    <th style="border: 1px solid black;"> 표시, 광고에 관한 기록 </th>
+                    <th style="border: 1px solid black;"> 6개월 </th>
+                </tr>
+		        <tr>
+                    <th style="border: 1px solid black;"> 전자금융거래법 </th>
+                    <th style="border: 1px solid black;"> 전자금융 거래에 관한 기록 </th>
+                    <th style="border: 1px solid black;"> 5년 </th>
+                </tr>
+		        <tr>
+                    <th style="border: 1px solid black;"> 통신비밀보호법 </th>
+                    <th style="border: 1px solid black;"> 서비스 방문기록, 접속로그,접속 아이피 </th>
+                    <th style="border: 1px solid black;"> 3개월 </th>
+                </tr>
+		        <tr>
+                    <th style="border: 1px solid black;"> 정보통신망 이용촉진 및 정보보호 등에 관한 법률 </th>
+                    <th style="border: 1px solid black;"> 본인 확인에 관한 기록 </th>
+                    <th style="border: 1px solid black;"> 6개월 </th>
+                </tr>
+                </table>
+
+                <br><br>개인정보의 제3자 제공 및 위탁 동의(필수)<br>
+                1. 회사는 이용자의 개인정보를 제 1조(수집하는 개인정보의 항목 및 수집방법)에서 명시한 범위 내에서 처리하며, 이용자의 동의, 법률의 특별한 규정 등 개인정보보호법 제17조 및 제 18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.<br><br>
+
+                2. 회사는 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.<br><br>
+
+                제3자 : 중소기업비즈니스혁신센터<br>
+                제공하는 개인정보항목 : 이름,연락처,상호명,업종,지역 등등<br>
+                제공받는자의 이용목적 : 맞춤형 서비스 제공, 운영 업무 대행<br>
+                제공받는자의 보유 및 이용기간 : 참여일로부터 12개월<br><br>
+
+                3. 회사는 이용자에게 다양한 서비스를 제공하는 데에 반드시 필요한 업무 중 일부를 외부 업체로 하여금 수행하도록 개인정보의 취급 업무를 위탁합니다. 개인정보 위탁처리 기관 및 위탁업무의 내용은 다음과 같습니다.<br><br>
+
+                수탁자(업체) : 리코코퍼레이션<br>
+                위탁업무 내용 : 개인정보 수집 및 제공<br>
+                위탁처리 정보 : 이름,연락처,지역,확인사항 등<br>
+                개인정보 이용기간 : 개인정보 제공을 완료한 시점까지만<br><br>
+
+                4. 이용자는 서비스 제공 및 이용 이외의 목적으로 제3자에게 본인의 개인정보를 제공하는 것에 동의하지 않을 수 있습니다.<br>
+                5. 회사는 개인정보 제공업체에 변경이 생길 수 있습니다. 이에 대한 변경사항은 회사 인터넷 사이트를 통해 제공받는자, 이용목적, 제공하는 개인정보항목, 보유 및 이용기간에 대해 공지하고 별도의 고객동의를 득하여 업체에게 제공됩니다.<br>
+                6. 이용자는 이미 동의한 개인정보 제3자 제공에 대한 철회를 요청할 수 있으며, 요청하는 창구는 다음과 같습니다.<br><br>
+
+                개인정보관리책임자<br>
+                이름 : 김선재<br>
+                소속/직위:개인정보관리책임자<br>
+                이메일 : ricco-corporation@naver.com<br><br>
+
+                기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.<br>
+                1.개인분쟁조정위원회 (https://www.1336.or.kr/1336)<br>
+                2.정보보호마크인증위원회 (https://www.eprivacy.or.kr/02-580-0533~4)<br>
+                3.대검찰청 인터넷범죄수사센터 (02-3480-3600)<br>
+                4.경찰청 사이버테러대응센터 (https://www.ctrc.go.kr/02-392-0330)<br>
+            </div>
+        </div>
+  </div>
 <!--자바스크립트-->
 <!-- 헤더 메뉴바 (네비게이션) -->
 <script>
@@ -1076,120 +1079,45 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-<!--섹션6. 자바스크립트(CTA,폼)-->
+<!--섹션6. JS 투데이 신청자 -->
 <script>
-// 오늘 방문 카운트 그대로…
+  // 오늘 날짜 기준으로 '매일 동일한 숫자' 생성
+  function getTodayCount() {
+    // 오늘 날짜 가져오기 (YYYY-MM-DD)
+    const today = new Date().toISOString().slice(0, 10);
 
-/* 연락처 자동 하이픈 */
-const phone = document.getElementById('phone');
-if (phone) {
-  phone.addEventListener('input', (e) => {
-    let v = e.target.value.replace(/[^0-9]/g,'');
-    if (v.startsWith('02')) {
-      if (v.length > 2 && v.length <= 5) v = v.replace(/(\d{2})(\d+)/, '$1-$2');
-      else if (v.length > 5 && v.length <= 9) v = v.replace(/(\d{2})(\d{3,4})(\d+)/, '$1-$2-$3');
-      else if (v.length > 9) v = v.slice(0,10).replace(/(\d{2})(\d{4})(\d{4})/, '$1-$2-$3');
-    } else {
-      if (v.length > 3 && v.length <= 7) v = v.replace(/(\d{3})(\d+)/, '$1-$2');
-      else if (v.length > 7) v = v.slice(0,11).replace(/(\d{3})(\d{3,4})(\d{4})/, '$1-$2-$3');
+    // 날짜 문자열을 시드(seed) 값으로 변환
+    let seed = 0;
+    for (let i = 0; i < today.length; i++) {
+      seed += today.charCodeAt(i);
     }
-    e.target.value = v;
-  });
-}
 
-/* 사업자등록번호 자동 하이픈 (###-##-#####) */
-const bizno = document.getElementById('bizno');
-if (bizno) {
-  bizno.addEventListener('input', (e) => {
-    let v = e.target.value.replace(/[^0-9]/g,'').slice(0,10);
-    if (v.length > 3 && v.length <= 5) v = v.replace(/(\d{3})(\d+)/, '$1-$2');
-    else if (v.length > 5) v = v.replace(/(\d{3})(\d{2})(\d+)/, '$1-$2-$3');
-    e.target.value = v;
-  });
-}
+    // 원하는 범위 (최소 ~ 최대)에서 숫자 생성
+    const min = 25;
+    const max = 60;
 
-/* 폼 검증 + 데모 제출 */
-const form = document.getElementById('consult-form');
-function setErr(input, msg) {
-  const err = input.closest('.lf__field')?.querySelector('.lf__err');
-  if (err) err.textContent = msg || '';
-  input.classList.toggle('is-invalid', !!msg);
-}
-function validate() {
-  let ok = true;
-  form.querySelectorAll('[required]').forEach(el => {
-    const val = (el.type === 'checkbox') ? (el.checked ? '1' : '') : el.value.trim();
-    if (!val) {
-      setErr(el, '필수 입력입니다.');
-      ok = false; return;
-    } else {
-      setErr(el, '');
-    }
-    // 추가 패턴 체크
-    if (el.id === 'bizno' && !/^\d{3}-\d{2}-\d{5}$/.test(el.value)) {
-      setErr(el, '형식: 123-45-67890');
-      ok = false;
-    }
-    if (el.id === 'phone' && !/^0\d{1,2}-\d{3,4}-\d{4}$/.test(el.value)) {
-      setErr(el, '유효한 연락처 형식이 아닙니다.');
-      ok = false;
+    // 날짜마다 고정된 값 나오도록 seed를 활용
+    const count = (seed % (max - min + 1)) + min;
+
+    return count;
+  }
+
+  // DOM에 숫자 반영
+  document.addEventListener("DOMContentLoaded", function() {
+    const todayCountEl = document.getElementById("today-count");
+    if (todayCountEl) {
+      todayCountEl.textContent = getTodayCount();
     }
   });
-  return ok;
-}
-form?.addEventListener('submit', (e) => {
-  e.preventDefault();
-  if (!validate()) return;
-  const btn = form.querySelector('.lf__submit');
-  btn.disabled = true; btn.textContent = '전송 중...';
-  setTimeout(() => {
-    alert('상담 신청이 접수되었습니다. 담당자가 곧 연락드립니다.');
-    form.reset();
-    btn.disabled = false; btn.textContent = '무료 상담 신청하기';
-  }, 900);
-});
-
-/* 포커스/입력 시 에러 해제 */
-form?.querySelectorAll('input, select, textarea').forEach(el => {
-  el.addEventListener('input', () => setErr(el, ''));
-  el.addEventListener('change', () => setErr(el, ''));
-});
 </script>
 
-<!-- ===================== -->
-<!-- Footer -->
-<!-- ===================== -->
-<footer class="site-footer" aria-labelledby="footer-title">
-  <h2 id="footer-title" class="sr-only">사이트 정보</h2>
+<!--JS파일-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!--(필수)이 제이쿼리 코드 다음에 js코드가 와야함-->
+  <script src="./js/form-fund-row.js"></script>
+  <script src="js/validation-fund-row.js"></script>
+  <script src="js/personal.js"></script>
+  <script src="js/main.js" charset="euc-kr"></script>
+  <script src="js/wow.min.js"></script>
 
-  <div class="container footer__inner">
-    <!-- 좌측: 로고/소개 -->
-    <div class="footer__brand">
-      <div class="footer__logo" aria-label="DB POTENT 디비포텐">
-        <span class="footer__logo-en">사업자 이름</span>
-        <span class="footer__logo-ko">사업자 이름</span>
-      </div>
-
-      <p class="footer__slogan">
-        업종별 맞춤 최대한도& 최저금리 승인전략을 제시하는<br>
-        검증된 정책자금 컨설팅 서비스
-      </p>
-    </div>
-
-    <!-- 우측: 사업자 정보 -->
-    <div class="footer__org" role="list">
-      <p class="footer__item" role="listitem"><span class="k">대표</span><span class="v">강민우</span></p>
-      <p class="footer__item" role="listitem"><span class="k">상호</span><span class="v">리코 코퍼레이션</span></p>
-      <p class="footer__item" role="listitem"><span class="k">사업자등록번호</span><span class="v">366-03-03344</span></p>
-    </div>
-  </div>
-
-  <!-- 하단 바 -->
-  <div class="footer__bar">
-    <div class="container">
-      <p class="footer__copy">사업자 이름 © All Rights Reserved.</p>
-    </div>
-  </div>
-</footer>
 </body>
 </html>
