--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container nav__inner">
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
-      <strong>중소기업 비즈니스 혁신센터</strong>
+      <strong>CBIC 중소기업 비즈니스 혁신센터</strong>
     </a>
 
     <!-- 모바일 햄버거 -->
