--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “최근 원자재 값이 치솟으면서 생산 원가 부담이 눈에 띄게 늘었습니다.
-                  자금이 막히면 거래처 납품에 차질이 생길까 불안했는데, 정책자금 솔루션 상담을 통해 긴급 운전자금을 바로 확보할 수 있었습니다. 
-                  덕분에 주문 물량을 제때 맞추고 거래 신뢰를 지킬 수 있었습니다.”
+                  “요즘 원자재 값이 너무 올라서 원가 부담이 정말 컸습니다. 
+                  혹시 납품을 못 맞출까 봐 불안했는데, 정책자금 상담 덕분에 긴급 운전자금을 바로 쓸 수 있었어요. 
+                  덕분에 거래처랑 약속도 지키고 신뢰도 잃지 않을 수 있었습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -170,9 +170,10 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “카페를 막 시작했을 때 가장 큰 어려움은 운영자금이었어요. 
-                  은행마다 서류만 쌓이다 보니 포기할까 싶었는데, 정책자금 상담을 통해 저희 매장 규모에 맞는 대출을 추천받고 바로 실행할 수 있었습니다. 
-                  그 덕분에 인테리어 마무리와 초기 홍보를 무리 없이 진행할 수 있었습니다.”
+                  “카페 막 시작했을 때 운영자금이 제일 힘들었거든요. 
+                  은행은 서류만 쌓이고 답이 안 나오니 포기할까 싶었는데, 
+                  정책자금 상담에서 저희 규모에 맞는 대출을 알려주더라고요. 
+                  덕분에 인테리어 마무리도 하고, 초반 홍보도 무리 없이 진행할 수 있었습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -207,9 +208,10 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “개발팀과 마케팅팀을 늘려야 하는 중요한 시점에 인건비가 발목을 잡았습니다. 
-                  어디서부터 자금을 마련해야 할지 막막했는데, 정책자금 컨설턴트분이 절차를 하나하나 안내해 주셔서 필요한 자금을 조달할 수 있었습니다. 
-                  지금은 개발자와 디자이너를 새로 합류시켜 사업을 본격적으로 확장하고 있습니다.”
+                  “개발팀이랑 마케팅팀을 꼭 늘려야 하는 시점이었는데, 
+                  인건비가 발목을 잡더라고요. 솔직히 어디서부터 자금을 구해야 할지 막막했는데, 
+                  담당자님이 절차를 하나하나 알려줘서 결국 자금을 확보할 수 있었습니다. 
+                  지금은 개발자랑 디자이너를 새로 뽑아서 본격적으로 확장 중입니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -244,10 +246,10 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “정책자금은 어렵다는 인식이 있었는데, 
-                  막상 상담을 받아보니 제 학원 상황에 딱 맞는 상품을 바로 알려주시더군요. 
-                  승인 과정도 간소화돼서 빠르게 자금을 확보할 수 있었습니다. 
-                  지금은 걱정 없이 교육 콘텐츠 개발에만 집중할 수 있게 되어 만족스럽습니다.”
+                  “솔직히 정책자금은 어렵고 까다롭다는 생각이 있었는데, 
+                  상담을 받아보니 제 상황에 맞는 상품을 바로 알려주시더라고요. 
+                  승인 절차도 생각보다 간단해서 금방 자금을 확보할 수 있었습니다. 
+                  지금은 자금 걱정 없이 콘텐츠 개발에만 집중하고 있습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -282,9 +284,9 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “운송 효율을 높이려면 오래된 차량을 교체해야 했지만 비용이 부담스러웠습니다. 
-                  다행히 정책자금으로 필요한 자금을 조달해 신규 차량을 들여올 수 있었고, 덕분에 배송 속도와 정확도가 크게 개선되었습니다. 
-                  고객사 신뢰가 높아지면서 매출도 자연스럽게 오르고 있습니다.”
+                  “차량 교체가 꼭 필요했는데 비용이 너무 부담스러웠습니다. 
+                  다행히 정책자금으로 신규 차량을 들여올 수 있었고, 그 덕에 배송 속도랑 정확도가 눈에 띄게 좋아졌습니다. 
+                  고객사에서도 신뢰가 높아져서 매출도 자연스럽게 올랐습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -319,10 +321,9 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “제품력에는 자신이 있었지만 홍보할 예산이 턱없이 부족해 늘 답답했습니다. 
-                  정책자금을 통해 마케팅 비용을 확보하고 나니 본격적인 온라인 광고를 집행할 수 있었고, 
-                  불과 몇 달 만에 매출이 눈에 띄게 올랐습니다. 
-                  광고 부담이 줄자 신규 라인업 개발에도 더 적극적으로 투자할 수 있었습니다.”
+                  “제품력은 자신 있었는데, 광고할 돈이 너무 부족해서 항상 답답했어요. 
+                  그런데 정책자금으로 마케팅 비용을 마련하고 나니 온라인 광고를 본격적으로 집행할 수 있었고, 몇 달 만에 매출이 확 늘었습니다. 
+                  광고 부담이 줄자 신제품 개발에도 더 자신 있게 투자하게 됐습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -357,9 +358,9 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “대형 프로젝트를 따냈지만 자재비와 인건비가 동시에 늘어나 자금 압박이 심했습니다. 
-                  정책자금 지원 덕분에 필요한 현금을 적시에 조달할 수 있었고, 공사도 일정대로 진행해 납기일을 지킬 수 있었습니다. 
-                  만약 이 지원이 없었다면 큰 프로젝트를 중도에 멈출 뻔했습니다.”
+                  “큰 프로젝트를 따냈는데 자재비랑 인건비가 동시에 올라서 자금 압박이 장난 아니었습니다. 
+                  정책자금 덕분에 현금을 제때 마련할 수 있었고, 공사도 일정 맞춰서 진행할 수 있었습니다. 
+                  이 지원이 없었다면 공사를 멈출 수도 있었을 거예요.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -394,10 +395,10 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “혼자 은행을 알아볼 땐 복잡한 서류 절차에 지쳐 포기할 뻔했는데, 
-                  정책자금 상담을 받으면서 꼭 필요한 자료만 준비하니 훨씬 수월했습니다. 
-                  덕분에 안정적으로 자금을 확보해 매장을 확장하고 새로운 주방 설비도 들여올 수 있었습니다. 
-                  지금은 고객 만족도가 높아지고 단골 고객도 꾸준히 늘고 있습니다.”
+                  “혼자 은행 다니면서 자금 알아볼 때는 서류 때문에 너무 복잡해서 포기할 뻔했는데, 
+                  정책자금 상담을 받으니 필요한 것만 준비하면 되더라고요. 
+                  자금을 확보한 덕분에 매장을 확장하고 주방 설비도 들여올 수 있었습니다. 
+                  지금은 손님 만족도도 올라가고 단골도 꾸준히 늘고 있습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -432,10 +433,9 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “창업 초반에는 자금 압박이 너무 심해 가게를 제대로 열 수 있을지조차 불안했습니다. 
-                  다행히 정책자금을 빠르게 승인받아 인테리어와 초기 운영비를 안정적으로 준비할 수 있었습니다. 
-                  그 덕분에 첫 매장을 안정적으로 자리 잡았고, 
-                  지금은 두 번째 매장 오픈을 준비할 만큼 사업이 성장했습니다.”
+                  “창업 초반에는 자금 압박이 정말 심해서 가게를 열 수 있을까 싶었습니다. 
+                  근데 정책자금을 빠르게 승인받으면서 인테리어랑 초기 운영비를 안정적으로 마련할 수 있었어요. 
+                  덕분에 첫 매장이 자리를 잡았고, 지금은 두 번째 매장을 준비할 정도로 성장했습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
@@ -470,9 +470,9 @@
                   </div>
                 </div>
                 <blockquote class="ts__quote">
-                  “강사 인건비와 교재 제작 비용이 동시에 겹쳐 학원 운영이 큰 부담이었습니다. 
-                  정책자금이 승인되면서 필요한 비용을 안정적으로 집행할 수 있었고, 남은 자원을 학생 맞춤형 수업 콘텐츠 개발에 투자할 수 있었습니다. 
-                  지금은 강사와 학생 모두 만족도가 높아지고 학원 운영도 한층 안정되었습니다.”
+                  “강사 인건비랑 교재 제작비가 한꺼번에 겹쳐서 운영이 많이 힘들었어요. 
+                  정책자금이 승인되면서 필요한 비용을 안정적으로 집행할 수 있었고, 남은 자금은 학생 맞춤형 콘텐츠 개발에 투자할 수 있었습니다. 
+                  지금은 강사랑 학생 모두 만족도가 높아지고, 학원도 훨씬 안정적으로 운영되고 있습니다.”
                 </blockquote>
               </div>
               <!-- 오른쪽 큰 박스: 사진 + 그래프(1:1) -->
