--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
     <h1 class="section__title">5,234건 승인 성공사례!<br>수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
-    <p class="section__desc">CBIC(중소기업 비즈니스 혁신센터)와 함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <p class="section__desc">CBIC(중소기업 비즈니스 혁신센터)와<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
@@ -515,54 +515,8 @@
     <button class="ts__dot" role="tab" aria-selected="false" aria-controls="slide-10"><span class="sr-only">10번 후기</span></button>
   </div>
 </section>
-  <!--섹션2 끝 -->
-  <!--섹션3 시작 (신청절차)-->
-<section class="section promises"  id="proccess" aria-labelledby="promises-title">
-  <div class="promises__bg" aria-hidden="true"></div>
-  <div class="section__head">
-    <h2 id="promises-title" class="section__title">정책자금 솔루션<br>간편한 절차</h2>
-    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
-  </div>
-
-  <div class="section__body">
-    <ul class="promises__grid" role="list">
-      <!-- 카드 1 -->
-      <li class="promise">
-        <div class="promise__icon" aria-hidden="true">
-          <img src="./img/pro001.png" alt="맞춤 상담 아이콘" />
-        </div>
-        <h3 class="promise__title">1:1 맞춤 전문상담</h3>
-        <p class="promise__desc">
-          현재 기업의 업종, 매출, 규모, 2025년 하반기 정책방향을 분석해 가장 적합한 자금을 추천합니다.
-        </p>
-      </li>
-
-      <!-- 카드 2 -->
-      <li class="promise">
-        <div class="promise__icon" aria-hidden="true">
-          <img src="./img/pro002.png" alt="원스톱 프로세스 아이콘" />
-        </div>
-        <h3 class="promise__title">ONE-STOP 프로세스</h3>
-        <p class="promise__desc">
-          까다로운 절차는 없애고 필요한 사업장 진단과 서류 처리를 빠르게 처리하고 자금 활용방안까지 안내드립니다.
-        </p>
-      </li>
-
-      <!-- 카드 3 -->
-      <li class="promise">
-        <div class="promise__icon" aria-hidden="true">
-          <img src="./img//pro003.png" alt="최대한도 자금 확보 아이콘" />
-        </div>
-        <h3 class="promise__title">최대한도 자금 확보</h3>
-        <p class="promise__desc">
-          기업이 가진 조건을 최대한으로 높혀, 부결확률 1.7%의 자금심사를 거쳐 목표 한도의 자금을 수령합니다.
-        </p>
-      </li>
-    </ul>
-  </div>
-</section>
-<!--섹션3 끝 -->
-<!--섹션4 시작 -->
+<!--섹션2 끝 -->
+<!--섹션3 시작 -->
 <!-- Section 4 : Success Rate -->
 <section class="section success" aria-labelledby="success-title">
   <div class="section__head">
@@ -596,8 +550,8 @@
     </p>
   </div>
 </section>
-<!--섹션4 끝 -->
-<!--섹션5 시작 -->
+<!--섹션3 끝 -->
+<!--섹션4 시작 -->
 <!-- Section 5 : 진행 업종 -->
 <section class="section industries" aria-labelledby="industries-title">
   <div class="section__head">
@@ -700,6 +654,52 @@
   </div>
 </section>
 
+<!--섹션4 끝 -->
+<!--섹션5 시작 (신청절차)-->
+<section class="section promises"  id="proccess" aria-labelledby="promises-title">
+  <div class="promises__bg" aria-hidden="true"></div>
+  <div class="section__head">
+    <h2 id="promises-title" class="section__title">정책자금 솔루션<br>간편한 절차</h2>
+    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
+  </div>
+
+  <div class="section__body">
+    <ul class="promises__grid" role="list">
+      <!-- 카드 1 -->
+      <li class="promise">
+        <div class="promise__icon" aria-hidden="true">
+          <img src="./img/pro001.png" alt="맞춤 상담 아이콘" />
+        </div>
+        <h3 class="promise__title">1:1 맞춤 전문상담</h3>
+        <p class="promise__desc">
+          현재 기업의 업종, 매출, 규모, 2025년 하반기 정책방향을 분석해 가장 적합한 자금을 추천합니다.
+        </p>
+      </li>
+
+      <!-- 카드 2 -->
+      <li class="promise">
+        <div class="promise__icon" aria-hidden="true">
+          <img src="./img/pro002.png" alt="원스톱 프로세스 아이콘" />
+        </div>
+        <h3 class="promise__title">ONE-STOP 프로세스</h3>
+        <p class="promise__desc">
+          까다로운 절차는 없애고 필요한 사업장 진단과 서류 처리를 빠르게 처리하고 자금 활용방안까지 안내드립니다.
+        </p>
+      </li>
+
+      <!-- 카드 3 -->
+      <li class="promise">
+        <div class="promise__icon" aria-hidden="true">
+          <img src="./img//pro003.png" alt="최대한도 자금 확보 아이콘" />
+        </div>
+        <h3 class="promise__title">최대한도 자금 확보</h3>
+        <p class="promise__desc">
+          기업이 가진 조건을 최대한으로 높혀, 부결확률 1.7%의 자금심사를 거쳐 목표 한도의 자금을 수령합니다.
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
 <!--섹션5 끝 -->
 <!--섹션6(입력폼) 시작 -->
   <div id="form"></div>
