--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <!--섹션2 시작 -->
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
-    <h1 class="section__title">5,234건 승인 성공사례!<br>수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
+    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
     <p class="section__desc">CBIC(중소기업 비즈니스 혁신센터)와<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
   </div>
 
@@ -520,7 +520,7 @@
 <!-- Section 4 : Success Rate -->
 <section class="section success" aria-labelledby="success-title">
   <div class="section__head">
-    <h2 id="success-title" class="section__title">5,234건이 넘는<br>압도적인 정책자금 승인율!</h2>
+    <h2 id="success-title" class="section__title">5,234건이 넘는 성공사례!<br>압도적인 정책자금 승인율!</h2>
     <p class="section__desc">15년 이상의 축적된 오랜 노하우로 검증된 성공율을 보장합니다.</p>
   </div>
 
