--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>정부정책자금 히어로 섹션</title>
+  <title>정부지원 정책자금 솔루션</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
   <div class="container nav__inner">
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
-      <strong>CBIC 중소기업 비즈니스 혁신센터</strong>
+      <strong>K-Biz 자금지원 그룹</strong>
     </a>
 
     <!-- 모바일 햄버거 -->
@@ -58,7 +58,7 @@
           개인·법인 사업자 업종별 맞춤 정책자금 솔루션
         </span>
 
-        <h1 class="title">2025년 하반기 경기도 정부 정책자금</h1>
+        <h1 class="title">2025년 하반기 정부지원 정책자금</h1>
         <p class="lead">
           대표님의 성공을 위해 희망과 해답을 드리는 파트너.<br/>
           <span style="font-size:22px;">금리 최저 <b>연 2%</b></span><br>
@@ -104,7 +104,7 @@
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
     <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
-    <p class="section__desc">CBIC(중소기업 비즈니스 혁신센터)와<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <p class="section__desc">K-Biz 자금지원 그룹과<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
@@ -659,7 +659,7 @@
 <section class="section promises"  id="proccess" aria-labelledby="promises-title">
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
-    <h2 id="promises-title" class="section__title">정책자금 솔루션<br>간편한 절차</h2>
+    <h2 id="promises-title" class="section__title">정책자금 컨설팅 솔루션<br>간편한 절차</h2>
     <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
   </div>
 
@@ -716,8 +716,8 @@
     <!-- 좌측: 로고/소개 -->
     <div class="footer__brand">
       <div class="footer__logo">
-        <span class="footer__logo-en">CBIC</span>
-        <span class="footer__logo-ko">중소기업 비즈니스 혁신센터</span>
+        <span class="footer__logo-en">K-Biz</span>
+        <span class="footer__logo-ko">자금지원 그룹</span>
       </div>
 
       <p class="footer__slogan">
@@ -728,16 +728,15 @@
 
     <!-- 우측: 사업자 정보 -->
     <div class="footer__org" role="list">
-      <p class="footer__item" role="listitem"><span class="k">대표</span>김성환<span class="v"></span></p>
-      <p class="footer__item" role="listitem"><span class="k">주소</span><span class="v">서울 강서구 마곡중앙1로 14, 7층 710호</span></p>
-      <p class="footer__item" role="listitem"><span class="k">사업자등록번호</span><span class="v">872-04-02911</span></p>
+      <p class="footer__item" role="listitem"><span class="k">브랜드명</span><span class="v">K-Biz 자금지원 그룹</span></p>
+      <p class="footer__item" role="listitem"><span class="k">사업자등록번호</span><span class="v">366-03-03344</span></p>
     </div>
   </div>
 
   <!-- 하단 바 -->
   <div class="footer__bar">
     <div class="container">
-      <p class="footer__copy">리코 코퍼레이션  © All Rights Reserved.</p>
+      <p class="footer__copy">리코 코퍼레이션 © All Rights Reserved.</p>
     </div>
   </div>
 </footer>
