--- a/result.html
+++ b/result.html
@@ -23,8 +23,7 @@
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
       <strong>K-Biz 자금지원 그룹</strong> 
-    </a>
-
+    </a>ㄴ
     <!-- 모바일 햄버거 -->
     <!-- <button class="nav__toggle" aria-expanded="false" aria-controls="nav-menu" aria-label="메뉴 열기">
       <span class="nav__bar"></span>
@@ -65,11 +64,11 @@
           <b><u>서울 · 경기 1금융권 은행  200개점과 업무 협약</u></b>을 맺은 튼튼한 업체로써
           자타공인 중소기업 정책자금 컨설팅 노하우를 지닌 회사입니다.
           <br><br>
-          <span style="color:#0b5bd3"><b>CBIC 중소기업비즈니스혁신센터</b></span>는 15년이 넘는 시간동안 <b>정부 정책자금</b><u>(운전자금, 시설자금 등)</u>에 대한 전략적 솔루션을 제공해오고 있으며 
-          기업의 성장 단계에 맞춘 <b>경영인증</b> <u>(예: 벤처기업, 이노비즈, 메인비즈 등)</u>을 통해 
+          <span style="color:#0b5bd3"><b>CBIC 중소기업비즈니스혁신센터</b></span>는 15년이 넘는 시간동안 정부 정책자금<u>(운전자금, 시설자금 등)</u>에 대한 전략적 솔루션을 제공해오고 있으며 
+          기업의 성장 단계에 맞춘 경영인증 <u>(예: 벤처기업, 이노비즈, 메인비즈 등)</u>을 통해 
           기술력과 경쟁력 향상을 도모하고 있습니다. 
           <br><br>
-          또한 <b>기술개발 자금</b> 확보 분야에서도 다수의 성공 사례와 풍부한 실적을 축적하였으며 기업의 혁신 역량을 실질적으로 강화해드리고 있습니다.
+          또한 기술개발 자금 확보 분야에서도 다수의 성공 사례와 풍부한 실적을 축적하였으며 기업의 혁신 역량을 실질적으로 강화해드리고 있습니다.
           <br><br>
           대표님의 회사에 <b>필요한 자금을 확실하게 확보</b>할수 있도록 최선을 다하겠습니다. <br><br>감사합니다.
           <!-- <span style="font-size:22px;">금리 최저 <b>연 2%</b></span><br>
