--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
           <path d="M15 6l-6 6 6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </button>
-
       <div class="ts__viewport">
         <ul class="ts__track">
           <!-- ========== Slide 1 ========== -->
@@ -722,7 +721,7 @@
 
       <p class="footer__slogan">
         업종별 맞춤 최대한도& 최저금리 승인전략을 제시하는<br>
-        검증된 정책자금 컨설팅 서비스
+        검증된 정책자금 컨설팅 그룹
       </p>
     </div>
 
