--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         </div>
         <h3 class="promise__title">ONE-STOP 프로세스</h3>
         <p class="promise__desc">
-          까다로운 절차는 없애고 필요한 사업장 진단과 서류 처리를 빠르게 처리하고 자금 활용방안까지 안내드립니다.
+          까다로운 절차는 없애고 필요한 서류확인과 사업장 진단을 빠르게 완료하고 자금 활용방안까지 안내드립니다.
         </p>
       </li>
 
