--- a/result.html
+++ b/result.html
@@ -23,7 +23,7 @@
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
       <strong>K-Biz 자금지원 그룹</strong> 
-    </a>ㄴ
+    </a>
     <!-- 모바일 햄버거 -->
     <!-- <button class="nav__toggle" aria-expanded="false" aria-controls="nav-menu" aria-label="메뉴 열기">
       <span class="nav__bar"></span>
@@ -525,8 +525,53 @@
   </div>
 </section>
 <!--섹션2 끝 -->
-</main>
+<!--섹션5 시작 (신청절차)-->
+<section class="section promises"  id="proccess" aria-labelledby="promises-title">
+  <div class="promises__bg" aria-hidden="true"></div>
+  <div class="section__head">
+    <h2 id="promises-title" class="section__title">정책자금 컨설팅 솔루션<br>간편한 절차</h2>
+    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
+  </div>
 
+  <div class="section__body">
+    <ul class="promises__grid" role="list">
+      <!-- 카드 1 -->
+      <li class="promise">
+        <div class="promise__icon" aria-hidden="true">
+          <img src="./img/pro001.png" alt="맞춤 상담 아이콘" />
+        </div>
+        <h3 class="promise__title">1:1 맞춤 전문상담</h3>
+        <p class="promise__desc">
+          현재 기업의 업종, 매출, 규모, 2025년 하반기 정책방향을 분석해 가장 적합한 자금을 추천합니다.
+        </p>
+      </li>
+
+      <!-- 카드 2 -->
+      <li class="promise">
+        <div class="promise__icon" aria-hidden="true">
+          <img src="./img/pro002.png" alt="원스톱 프로세스 아이콘" />
+        </div>
+        <h3 class="promise__title">ONE-STOP 프로세스</h3>
+        <p class="promise__desc">
+          까다로운 절차는 없애고 필요한 서류확인과 사업장 진단을 빠르게 완료하고 자금 활용방안까지 안내드립니다.
+        </p>
+      </li>
+
+      <!-- 카드 3 -->
+      <li class="promise">
+        <div class="promise__icon" aria-hidden="true">
+          <img src="./img//pro003.png" alt="최대한도 자금 확보 아이콘" />
+        </div>
+        <h3 class="promise__title">최대한도 자금 확보</h3>
+        <p class="promise__desc">
+          기업이 가진 조건을 최대한으로 높혀, 부결확률 1.7%의 자금심사를 거쳐 목표 한도의 자금을 수령합니다.
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
+<!--섹션5 끝 -->
+</main>
 <!-- ===================== -->
 <!-- Footer -->
 <!-- ===================== -->
@@ -543,7 +588,7 @@
 
       <p class="footer__slogan">
         업종별 맞춤 최대한도& 최저금리 승인전략을 제시하는<br>
-        검증된 정책자금 컨설팅 서비스
+        검증된 정책자금 컨설팅 그룹
       </p>
     </div>
 
