--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
 
         <h1 class="title">2025년 하반기 정부지원 정책자금</h1>
         <p class="lead">
-          대표님의 성공을 위해 희망과 해답을 드리는 파트너.<br/>
           <span style="font-size:22px;">금리 최저 <b>연 2%</b></span><br>
           <span style="font-size:22px;">상환기간 최대 <b>10년</b></span><br>
-          <span style="font-size:22px;">자금한도 최대 <b>5억</b></span>
+          <span style="font-size:22px;">자금한도 최대 <b>5억</b></span><br><br>
+          <b>대표님! 긴급하게 자금이 필요하시다구요 ?</b><br>
+          무담보, 저렴한 금리, 높은 한도, 넉넉한 상환기간 등으로<br>
+          사업자에게 유리한 정부 보증 정책자금으로<br>
+          필요한 자금을 지금 바로 마련해보세요.
         </p>
 
         <div class="bullets" role="list">
