--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
           <span style="font-size:22px;">금리 최저 <b>연 2%</b></span><br>
           <span style="font-size:22px;">상환기간 최대 <b>10년</b></span><br>
           <span style="font-size:22px;">자금한도 최대 <b>5억</b></span><br><br>
-          <span style="font-size: 20px; color:#1f5fae;"><b>대표님! 긴급하게 자금이 필요하시다구요 ?</b><br></span>
-          <span style="font-size: 18px;">무담보, 저렴한 금리, 높은 한도, 넉넉한 상환기간 등으로 사업자에게 유리한 정부 보증 정책자금으로 필요한 자금을 지금 바로 마련해보세요.</span>
+          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금이 급하게 필요하신가요 ?</b><br></span>
+          <span style="font-size: 18px;">
+          무담보, 저금리, 높은 한도, 넉넉한 상환기간까지! 정부가 보증하는 유리한 정책자금으로, 지금 바로 긴급한 자금을 마련해보세요.
+          </span>
         </p>
 
         <div class="bullets" role="list">
