--- a/index.html
+++ b/index.html
@@ -1120,5 +1120,11 @@ document.addEventListener("DOMContentLoaded", () => {
   <script src="js/main.js" charset="euc-kr"></script>
   <script src="js/wow.min.js"></script>
 
+  <script>
+  $('#form').attr("name","fm");
+  $('[name="entry.1767017674"]').val("인덱스");
+  $('#select_lic').css({"display":"none"});
+  </script>
+
 </body>
 </html>
