--- a/index.html
+++ b/index.html
@@ -1114,8 +1114,8 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!--JS파일-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!--(필수)이 제이쿼리 코드 다음에 js코드가 와야함-->
-  <script src="./js/form-fund-row.js"></script>
-  <script src="js/validation-fund-row.js"></script>
+  <script src="./js/form-fund.js"></script>
+  <script src="js/validation-fund.js"></script>
   <script src="js/personal.js"></script>
   <script src="js/main.js" charset="euc-kr"></script>
   <script src="js/wow.min.js"></script>
