--- a/result.html
+++ b/result.html
@@ -45,19 +45,19 @@
 
     // 토큰이 없으면 발화하지 않음 (공유/직접 접근 차단)
     if (!tx) {
-        console.info('no token → skip Purchase');
+        console.info('no token → skip Lead');
         return;
     }
 
     // 같은 세션에서 같은 토큰으로는 다시 발화하지 않음
     if (sessionStorage.getItem('tx_used:' + tx)) {
-        console.info('duplicate token → skip Purchase');
+        console.info('duplicate token → skip Lead');
         return;
     }
     sessionStorage.setItem('tx_used:' + tx, '1');
 
     // 최초 1회 정상 발화
-    fbq('track', 'Purchase', {currency: "KRW", value:0});
+    fbq('track', 'Lead', {currency: "KRW", value:0});
 
     // 새로고침 시 URL에서 토큰 제거
     history.replaceState({}, '', window.location.pathname);
