--- a/meta-incheon.html
+++ b/meta-incheon.html
@@ -849,7 +849,7 @@
 
                 2. 회사는 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.<br><br>
 
-                제3자 : 중소기업비즈니스혁신센터<br>
+                제3자 : K-Biz자금지원그룹,중소기업비즈니스혁신센터<br>
                 제공하는 개인정보항목 : 이름,연락처,상호명,업종,지역 등등<br>
                 제공받는자의 이용목적 : 맞춤형 서비스 제공, 운영 업무 대행<br>
                 제공받는자의 보유 및 이용기간 : 참여일로부터 12개월<br><br>
@@ -858,7 +858,7 @@
 
                 수탁자(업체) : 리코코퍼레이션<br>
                 위탁업무 내용 : 개인정보 수집 및 제공<br>
-                위탁처리 정보 : 이름,연락처,지역,확인사항 등<br>
+                위탁처리 정보 : 이름,연락처,상호명,업종,지역 등등<br>
                 개인정보 이용기간 : 개인정보 제공을 완료한 시점까지만<br><br>
 
                 4. 이용자는 서비스 제공 및 이용 이외의 목적으로 제3자에게 본인의 개인정보를 제공하는 것에 동의하지 않을 수 있습니다.<br>
