--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>정부지원 정책자금 솔루션</title>
+  <title>정책자금 컨설팅 솔루션</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,23 +15,6 @@
   <link rel="stylesheet" href="css/ionicons.min.css"  /> <!--개인정보 팝업 닫기버튼-->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
 
-  <!-- Meta Pixel Code -->
-  <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1834985387112444');
-  fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1834985387112444&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Meta Pixel Code -->
 
 </head>
 
@@ -41,7 +24,7 @@
   <div class="container nav__inner">
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
-      <strong>K-Biz 자금지원 그룹</strong>
+      <strong>K-Biz 경영지원 그룹</strong>
     </a>
 
     <!-- 모바일 햄버거 -->
@@ -126,7 +109,7 @@
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
     <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
-    <p class="section__desc">K-Biz 자금지원 그룹과<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <p class="section__desc">K-Biz 경영지원 그룹과<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
@@ -738,7 +721,7 @@
     <div class="footer__brand">
       <div class="footer__logo">
         <span class="footer__logo-en">K-Biz</span>
-        <span class="footer__logo-ko">자금지원 그룹</span>
+        <span class="footer__logo-ko">경영지원 그룹</span>
       </div>
 
       <p class="footer__slogan">
@@ -749,7 +732,7 @@
 
     <!-- 우측: 사업자 정보 -->
     <div class="footer__org" role="list">
-      <p class="footer__item" role="listitem"><span class="k">브랜드명</span><span class="v">K-Biz 자금지원 그룹</span></p>
+      <p class="footer__item" role="listitem"><span class="k">브랜드명</span><span class="v">K-Biz 경영지원 그룹</span></p>
       <p class="footer__item" role="listitem"><span class="k">사업자등록번호</span><span class="v">366-03-03344</span></p>
     </div>
   </div>
@@ -849,7 +832,7 @@
 
                 2. 회사는 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.<br><br>
 
-                제3자 : K-Biz자금지원그룹,중소기업비즈니스혁신센터<br>
+                제3자 : K-Biz경영지원그룹,중소기업비즈니스혁신센터<br>
                 제공하는 개인정보항목 : 이름,연락처,상호명,업종,지역 등등<br>
                 제공받는자의 이용목적 : 맞춤형 서비스 제공, 운영 업무 대행<br>
                 제공받는자의 보유 및 이용기간 : 참여일로부터 12개월<br><br>
