--- a/result.html
+++ b/result.html
@@ -15,23 +15,6 @@
   <link rel="stylesheet" href="css/ionicons.min.css"  /> <!--개인정보 팝업 닫기버튼-->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
 
-  <!-- Meta Pixel Code -->
-  <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1834985387112444');
-  fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1834985387112444&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Meta Pixel Code -->
 
 </head>
 
@@ -69,7 +52,7 @@
   <div class="container nav__inner">
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
-      <strong>K-Biz 자금지원 그룹</strong> 
+      <strong>K-Biz 경영지원 그룹</strong> 
     </a>
     <!-- 모바일 햄버거 -->
     <!-- <button class="nav__toggle" aria-expanded="false" aria-controls="nav-menu" aria-label="메뉴 열기">
@@ -104,7 +87,7 @@
         </span>
         <h2 class="" style="color: #163c87"><b>신청해주셔서 감사합니다</b></h2><br>
         <p class="" style="font-size: 18px;">
-          K-Biz 자금지원 그룹 소속<br>
+          K-Biz 경영지원 그룹 소속<br>
           <span style="color:#0b5bd3"><b>CBIC 중소기업비즈니스혁신센터의 담당자</b></span>가 
           <br>대표님께 1~2일내로 연락드릴 예정입니다.<br><br>
           <span style="color:#0b5bd3"><b>CBIC 중소기업비즈니스혁신센터</b></span>는
@@ -630,7 +613,7 @@
     <div class="footer__brand">
       <div class="footer__logo">
         <span class="footer__logo-en">K-Biz</span>
-        <span class="footer__logo-ko">자금지원 그룹</span>
+        <span class="footer__logo-ko">경영지원 그룹</span>
       </div>
 
       <p class="footer__slogan">
@@ -641,7 +624,7 @@
 
     <!-- 우측: 사업자 정보 -->
     <div class="footer__org" role="list">
-      <p class="footer__item" role="listitem"><span class="k">브랜드명</span><span class="v">K-Biz 자금지원 그룹</span></p>
+      <p class="footer__item" role="listitem"><span class="k">브랜드명</span><span class="v">K-Biz 경영지원 그룹</span></p>
       <p class="footer__item" role="listitem"><span class="k">사업자등록번호</span><span class="v">366-03-03344</span></p>
     </div>
   </div>
