--- a/index.html
+++ b/index.html
@@ -57,17 +57,19 @@
           <svg class="spark" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path d="M12 2v20M2 12h20M5.5 5.5l13 13M18.5 5.5l-13 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
-          개인·법인 사업자 업종별 맞춤 정책자금 솔루션
+          개인·법인 사업자 업종별 정책자금 활용 솔루션
         </span>
 
-        <h1 class="title">2025년 하반기 정부지원 정책자금</h1>
+        <h1 class="title">2025년 하반기 경기도 정책금융 컨설팅 솔루션</h1>
         <p class="lead">
-          <span style="font-size:22px;">금리 최저 <b>연 2%</b></span><br>
-          <span style="font-size:22px;">상환기간 최대 <b>15년</b></span><br>
-          <span style="font-size:22px;">자금한도 최대 <b>30억</b></span><br><br>
-          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금이 급하게 필요하신가요 ?</b><br></span>
+          <span style="font-size:24px;">2025년 정책금융 기준 (참고수치)</span><br>
+          <span style="font-size:22px;">금리 <b>연 2%대</b></span><br>
+          <span style="font-size:22px;">상환기간 <b>5~15년</b> 내외</span><br>
+          <span style="font-size:22px;">자금 최대 <b>최대 30억</b> 내외</span><br>
+          <span style="font-size:18px;">※기업 규모 및 정책별 상이</span><br><br>
+          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금 조달이 고민이신가요?</b><br></span>
           <span style="font-size: 18px;">
-          무담보, 저금리, 높은 한도, 넉넉한 상환기간까지! 정부가 보증하는 유리한 정책자금으로, 지금 바로 긴급한 자금을 마련해보세요.
+          무담보·저금리 등 정책금융 제도를 기업 상황에 맞게 활용하는 맞춤 컨설팅으로 안정감을 되찾으세요.
           </span>
         </p>
 
@@ -76,13 +78,13 @@
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div><strong>세금, 연체없는 사업자</strong>라면 누구나!</div>
+            <div><strong>세금,연체,결손</strong>없는 사업자!</div>
           </div>
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>신용점수 <strong>700점 이상(NICE)</strong> 기준</div>
+            <div>신용점수 <strong>750점 이상(NICE)</strong> 기준</div>
           </div>
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -108,8 +110,8 @@
   <!--섹션2 시작 -->
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
-    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
-    <p class="section__desc">K-Biz 경영지원 그룹과<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>기업 경영자금 컨설팅<br></h1>
+    <p class="section__desc">정책자금 활용으로 성장한<br>대표님들의 실제 이야기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
@@ -524,33 +526,33 @@
 <!-- Section 4 : Success Rate -->
 <section class="section success" aria-labelledby="success-title">
   <div class="section__head">
-    <h2 id="success-title" class="section__title">5,234건이 넘는 성공사례!<br>압도적인 정책자금 승인율!</h2>
-    <p class="section__desc">15년 이상의 축적된 오랜 노하우로 검증된 성공율을 보장합니다.</p>
+    <h2 id="success-title" class="section__title">5,234건 이상의 기업이 선택한<br>정책금융 컨설팅</h2>
+    <p class="section__desc">15년 이상 축적된 경험으로 기업 맞춤 자금 컨설팅의 성과를 검증해왔습니다.</p>
   </div>
 
   <div class="success__grid">
     <div class="success__card">
       <span class="success__num" data-target="5234">0건</span>
-      <span class="success__label">정책자금 및 지원금</span><br>
-      <span class="success__label2">성공사례</span>
+      <span class="success__label">정책자금 및 경영지원</span><br>
+      <span class="success__label2">자문건수</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="97.3">0%</span>
-      <span class="success__label">정책자금 및 지원금</span><br>
-      <span class="success__label2">성공률</span>
+      <span class="success__label">정책자금(자문기준)</span><br>
+      <span class="success__label2">매칭률</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="95.7">0%</span>
-      <span class="success__label">기존건 추가 자금조달</span><br>
-      <span class="success__label2">성공률</span>
+      <span class="success__label">기존건 외 추가조달</span><br>
+      <span class="success__label2">연계율</span>
     </div>
   </div>
 
   <div class="success__footer">
-    <h3>수천 건의 정책자금 성공 사례가 증명합니다.</h3>
+    <h3>수천 건의 컨설팅 데이터가 그 성과를 보여줍니다.</h3>
     <p>
-      오랜시간 축적된 경험으로 안정적인 자금 연결을 지원합니다.<br>
-      신속하고 체계적인 프로세스로 대표님 회사의 자금 확보를 확실하게 도와드립니다.
+      오랜 시간 축적된 경험으로 안정적인 자금 연계를 지원합니다.<br>
+      신속하고 체계적인 프로세스로 대표님 회사의 성장 기반을 함께 만들어갑니다.
     </p>
   </div>
 </section>
@@ -559,12 +561,11 @@
 <!-- Section 5 : 진행 업종 -->
 <section class="section industries" aria-labelledby="industries-title">
   <div class="section__head">
-    <h2 id="industries-title" class="section__title">업종에 따라 확보 가능한<br>정책자금 규모!</h2>
+    <h2 id="industries-title" class="section__title">업종에 따라 달라지는<br>정책자금 범위와 활용전략</h2>
     <p class="section__desc">
-     업종별 특성과 2025년 하반기 정책방향을 정밀 진단해 최대한도, 최저금리 승인에 최적화된 맞춤 전략을 제공합니다.
+     업종별 특성과 2025년 하반기 정책 방향을 정밀 진단해, 기업별 한도·금리 조건에 최적화된 맞춤 전략을 설계합니다.
     </p>
   </div>
-
   <div class="section__body">
     <ul class="ind__grid" role="list">
   <!-- 1 -->
@@ -656,6 +657,11 @@
   </li>
 </ul>
   </div>
+  <div>
+    <p class="section__desc" style="text-align: center;">
+     <br>※금리·한도 등은 기업 규모와 정책별로 상이합니다.
+    </p>
+  </div>
 </section>
 
 <!--섹션4 끝 -->
@@ -664,7 +670,7 @@
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
     <h2 id="promises-title" class="section__title">정책자금 컨설팅 솔루션<br>간편한 절차</h2>
-    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
+    <p class="section__desc">기업 운영에 필요한 자금을 복잡한 절차 없이 효율적으로 확보할 수 있습니다.</p>
   </div>
 
   <div class="section__body">
@@ -676,7 +682,7 @@
         </div>
         <h3 class="promise__title">1:1 맞춤 전문상담</h3>
         <p class="promise__desc">
-          현재 기업의 업종, 매출, 규모, 2025년 하반기 정책방향을 분석해 가장 적합한 자금을 추천합니다.
+          현재 기업의 업종·매출·규모·2025년 하반기 정책 방향을 분석해 적합한 자금제도와 지원전략을 제안드립니다.
         </p>
       </li>
 
@@ -687,18 +693,18 @@
         </div>
         <h3 class="promise__title">ONE-STOP 프로세스</h3>
         <p class="promise__desc">
-          까다로운 절차는 없애고 필요한 서류확인과 사업장 진단을 빠르게 완료하고 자금 활용방안까지 안내드립니다.
+          복잡한 절차를 간소화해, 필요 서류 확인 → 사업장 진단 → 자금 활용방안 제시까지 한 번에 진행됩니다.
         </p>
       </li>
 
       <!-- 카드 3 -->
       <li class="promise">
         <div class="promise__icon" aria-hidden="true">
-          <img src="./img//pro003.png" alt="최대한도 자금 확보 아이콘" />
+          <img src="./img//pro003.png" alt="최적화된 자금 확보 아이콘" />
         </div>
-        <h3 class="promise__title">최대한도 자금 확보</h3>
+        <h3 class="promise__title">최적화된 자금 확보</h3>
         <p class="promise__desc">
-          기업이 가진 조건을 최대한으로 높혀, 부결확률 1.7%의 자금심사를 거쳐 목표 한도의 자금을 수령합니다.
+          기업이 가진 조건과 정책요건을 종합 분석해 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다. 
         </p>
       </li>
     </ul>
@@ -725,8 +731,8 @@
       </div>
 
       <p class="footer__slogan">
-        업종별 맞춤 최대한도& 최저금리 승인전략을 제시하는<br>
-        검증된 정책자금 컨설팅 그룹
+        업종별 한도·금리 요건을 분석해<br>
+        정책자금 활용 전략을 제시하는 전문 컨설팅 그룹
       </p>
     </div>
 
