--- a/result.html
+++ b/result.html
@@ -143,8 +143,8 @@
     <!--섹션2 시작 -->
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
-    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
-    <p class="section__desc">함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>기업 경영자금 컨설팅<br></h1>
+    <p class="section__desc">정책자금 활용으로 성장한<br>대표님들의 실제 이야기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
@@ -560,7 +560,7 @@
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
     <h2 id="promises-title" class="section__title">정책자금 컨설팅 솔루션<br>간편한 절차</h2>
-    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
+    <p class="section__desc">기업 운영에 필요한 자금을 복잡한 절차 없이 효율적으로 확보할 수 있습니다.</p>
   </div>
 
   <div class="section__body">
@@ -572,7 +572,7 @@
         </div>
         <h3 class="promise__title">1:1 맞춤 전문상담</h3>
         <p class="promise__desc">
-          현재 기업의 업종, 매출, 규모, 2025년 하반기 정책방향을 분석해 가장 적합한 자금을 추천합니다.
+          현재 기업의 업종·매출·규모·2025년 하반기 정책 방향을 분석해 적합한 자금제도와 지원전략을 제안드립니다.
         </p>
       </li>
 
@@ -583,18 +583,18 @@
         </div>
         <h3 class="promise__title">ONE-STOP 프로세스</h3>
         <p class="promise__desc">
-          까다로운 절차는 없애고 필요한 서류확인과 사업장 진단을 빠르게 완료하고 자금 활용방안까지 안내드립니다.
+          복잡한 절차를 간소화해, 필요 서류 확인 → 사업장 진단 → 자금 활용방안 제시까지 한 번에 진행됩니다.
         </p>
       </li>
 
       <!-- 카드 3 -->
       <li class="promise">
         <div class="promise__icon" aria-hidden="true">
-          <img src="./img//pro003.png" alt="최대한도 자금 확보 아이콘" />
+          <img src="./img//pro003.png" alt="최적화된 자금 확보 아이콘" />
         </div>
-        <h3 class="promise__title">최대한도 자금 확보</h3>
+        <h3 class="promise__title">최적화된 자금 확보</h3>
         <p class="promise__desc">
-          기업이 가진 조건을 최대한으로 높혀, 부결확률 1.7%의 자금심사를 거쳐 목표 한도의 자금을 수령합니다.
+          기업이 가진 조건과 정책요건을 종합 분석해 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다. 
         </p>
       </li>
     </ul>
@@ -617,8 +617,8 @@
       </div>
 
       <p class="footer__slogan">
-        업종별 맞춤 최대한도& 최저금리 승인전략을 제시하는<br>
-        검증된 정책자금 컨설팅 그룹
+        업종별 한도·금리 요건을 분석해<br>
+        정책자금 활용 전략을 제시하는 전문 컨설팅 그룹
       </p>
     </div>
 
