--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <h1 class="title">2025년 하반기 경기도 정책금융 컨설팅 솔루션</h1>
         <p class="lead">
-          <span style="font-size:24px;">2025년 정책금융 기준 (참고수치)</span><br>
+          <span style="font-size:24px;">2025년 정책기준 (참고수치)</span><br>
           <span style="font-size:22px;">금리 <b>연 2%대</b></span><br>
           <span style="font-size:22px;">상환기간 <b>5~15년</b> 내외</span><br>
           <span style="font-size:22px;">자금 최대 <b>최대 30억</b> 내외</span><br>
@@ -84,13 +84,13 @@
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>신용점수 <strong>750점 이상(NICE)</strong> 기준</div>
+            <div>신용점수 <strong>750점 이상</strong>(NICE or KCB)</div>
           </div>
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>사업자 개설 <strong>3개월 이상 &매출발생</strong></div>
+            <div>사업자등록 <strong>10년이내</strong>(2016년 1월1일 이후)</div>
           </div>
         </div>
 
