--- a/dangeun.html
+++ b/dangeun.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>정부지원 정책자금 솔루션</title>
+  <title>2025년 기업 정책자금 활용전략 컨설팅 솔루션</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/ionicons.min.css"  /> <!--개인정보 팝업 닫기버튼-->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
 
+
   <!-- Meta Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s)
@@ -25,11 +26,11 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1834985387112444');
+  fbq('init', '2253155728441697');
   fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1834985387112444&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=2253155728441697&ev=PageView&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
 
@@ -37,11 +38,11 @@
 
 <body>
   <!--HTML 헤더,메뉴바-->
-<header class="site-nav" role="navigation" aria-label="주요 메뉴">
+<header class="site-nav" role="navigation" aria-label="주요 메뉴"> 
   <div class="container nav__inner">
     <!-- 좌측 로고 -->
     <a href="#hero" class="nav__logo" aria-label="사업자 홈">
-      <strong>K-Biz 자금지원 그룹</strong>
+      <strong>K-Biz 경영지원 그룹</strong>
     </a>
 
     <!-- 모바일 햄버거 -->
@@ -74,39 +75,54 @@
           <svg class="spark" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path d="M12 2v20M2 12h20M5.5 5.5l13 13M18.5 5.5l-13 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
-          개인·법인 사업자 업종별 맞춤 정책자금 솔루션
+          개인·법인 사업자 업종별 정책자금 활용 솔루션
         </span>
 
-        <h1 class="title">2025년 하반기 경기도 정부지원 정책자금</h1>
+        <h1 class="title">2025년 경기도 제조업·도소매(OEM) 정책자금 솔루션</h1>
         <p class="lead">
-          <span style="font-size:22px;">금리 최저 <b>연 2%</b></span><br>
-          <span style="font-size:22px;">상환기간 최대 <b>15년</b></span><br>
-          <span style="font-size:22px;">자금한도 최대 <b>30억</b></span><br><br>
-          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금이 급하게 필요하신가요 ?</b><br></span>
+          <span style="font-size:22px;">금리 <b>연2~4%대</b></span><br>
+          <span style="font-size:22px;">상환기간 <b>최대 15년</b></span><br>
+          <span style="font-size:22px;">자금 <b>최소 1억~최대 30억</b></span><br>
+          <span style="font-size: 20px; color:#1f5fae;"><b>대표님, 자금 조달이 고민이신가요?</b><br></span>
           <span style="font-size: 18px;">
-          무담보, 저금리, 높은 한도, 넉넉한 상환기간까지! 정부가 보증하는 유리한 정책자금으로, 지금 바로 긴급한 자금을 마련해보세요.
+          무담보·저금리 넉넉한 상환기간 등 정책금융 제도를 기업 상황에 맞게 활용하는 맞춤 컨설팅으로 안정감을 되찾으세요.
           </span>
         </p>
-
         <div class="bullets" role="list">
+
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div><strong>세금, 연체없는 사업자</strong>라면 누구나!</div>
+            <div>경기도 소재 <strong>제조업, 도소매(OEM)</strong> 사업장</div>
+          </div>
+
+          <div class="bullet" role="listitem">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <div>연매출 <strong>2억원</strong> 이상</div>
           </div>
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>신용점수 <strong>700점 이상(NICE)</strong> 기준</div>
+            <div>신용점수 <strong>750점 이상</strong>(NICE or KCB)</div>
+          </div>
+
+          <div class="bullet" role="listitem">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <div>사업자등록 <strong>10년이내</strong>(2016년 1월1일 이후)</div>
           </div>
           <div class="bullet" role="listitem">
             <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M20 6l-11 11-5-5" fill="none" stroke="#1f5fae" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <div>사업자 개설 <strong>3개월 이상 &매출발생</strong></div>
+            <div><strong>세금,연체,결손</strong>없는 사업자</div>
           </div>
+
         </div>
 
         <!--<div class="ctas">
@@ -125,8 +141,8 @@
   <!--섹션2 시작 -->
   <section class="section testimonials" id="testimonial" aria-label="성공 사례">
   <div class="section__head">
-    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>정책자금 솔루션<br></h1>
-    <p class="section__desc">K-Biz 자금지원 그룹과<br>함께한 대표님들의 리얼 후기를 확인해보세요</p>
+    <h1 class="section__title">수많은 기업이 신뢰하고 있는<br>기업 경영자금 컨설팅<br></h1>
+    <p class="section__desc">정책자금 활용으로 성장한<br>대표님들의 실제 이야기를 확인해보세요</p>
   </div>
 
   <div class="section__body">
@@ -541,33 +557,33 @@
 <!-- Section 4 : Success Rate -->
 <section class="section success" aria-labelledby="success-title">
   <div class="section__head">
-    <h2 id="success-title" class="section__title">5,234건이 넘는 성공사례!<br>압도적인 정책자금 승인율!</h2>
-    <p class="section__desc">15년 이상의 축적된 오랜 노하우로 검증된 성공율을 보장합니다.</p>
+    <h2 id="success-title" class="section__title">5,234건 이상의 기업이 선택한<br>정책금융 컨설팅</h2>
+    <p class="section__desc">15년 이상 축적된 경험으로 기업 맞춤 자금 컨설팅의 성과를 검증해왔습니다.</p>
   </div>
 
   <div class="success__grid">
     <div class="success__card">
       <span class="success__num" data-target="5234">0건</span>
-      <span class="success__label">정책자금 및 지원금</span><br>
-      <span class="success__label2">성공사례</span>
+      <span class="success__label">정책자금 및 경영지원</span><br>
+      <span class="success__label2">자문건수</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="97.3">0%</span>
-      <span class="success__label">정책자금 및 지원금</span><br>
-      <span class="success__label2">성공률</span>
+      <span class="success__label">정책자금(자문기준)</span><br>
+      <span class="success__label2">매칭률</span>
     </div>
     <div class="success__card">
       <span class="success__num" data-target="95.7">0%</span>
-      <span class="success__label">기존건 추가 자금조달</span><br>
-      <span class="success__label2">성공률</span>
+      <span class="success__label">기존건 외 추가조달</span><br>
+      <span class="success__label2">연계율</span>
     </div>
   </div>
 
   <div class="success__footer">
-    <h3>수천 건의 정책자금 성공 사례가 증명합니다.</h3>
+    <h3>수천 건의 컨설팅 데이터가 그 성과를 보여줍니다.</h3>
     <p>
-      오랜시간 축적된 경험으로 안정적인 자금 연결을 지원합니다.<br>
-      신속하고 체계적인 프로세스로 대표님 회사의 자금 확보를 확실하게 도와드립니다.
+      오랜 시간 축적된 경험으로 안정적인 자금 연계를 지원합니다.<br>
+      신속하고 체계적인 프로세스로 대표님 회사의 성장 기반을 함께 만들어갑니다.
     </p>
   </div>
 </section>
@@ -576,12 +592,11 @@
 <!-- Section 5 : 진행 업종 -->
 <section class="section industries" aria-labelledby="industries-title">
   <div class="section__head">
-    <h2 id="industries-title" class="section__title">업종에 따라 확보 가능한<br>정책자금 규모!</h2>
+    <h2 id="industries-title" class="section__title">업종에 따라 달라지는<br>정책자금 범위와 활용전략</h2>
     <p class="section__desc">
-     업종별 특성과 2025년 하반기 정책방향을 정밀 진단해 최대한도, 최저금리 승인에 최적화된 맞춤 전략을 제공합니다.
+     업종별 특성과 2025년 하반기 정책 방향을 정밀 진단해, 기업별 한도·금리 조건에 최적화된 맞춤 전략을 설계합니다.
     </p>
   </div>
-
   <div class="section__body">
     <ul class="ind__grid" role="list">
   <!-- 1 -->
@@ -673,6 +688,11 @@
   </li>
 </ul>
   </div>
+  <div>
+    <p class="section__desc" style="text-align: center;">
+     <br>※금리·한도 등은 기업 규모와 정책별로 상이합니다.
+    </p>
+  </div>
 </section>
 
 <!--섹션4 끝 -->
@@ -681,7 +701,7 @@
   <div class="promises__bg" aria-hidden="true"></div>
   <div class="section__head">
     <h2 id="promises-title" class="section__title">정책자금 컨설팅 솔루션<br>간편한 절차</h2>
-    <p class="section__desc">기업 운영에 꼭 맞는 자금을 복잡한 절차없이 빠르게 마련하세요.</p>
+    <p class="section__desc">기업 운영에 필요한 자금을 복잡한 절차 없이 효율적으로 확보할 수 있습니다.</p>
   </div>
 
   <div class="section__body">
@@ -693,7 +713,7 @@
         </div>
         <h3 class="promise__title">1:1 맞춤 전문상담</h3>
         <p class="promise__desc">
-          현재 기업의 업종, 매출, 규모, 2025년 하반기 정책방향을 분석해 가장 적합한 자금을 추천합니다.
+          현재 기업의 업종·매출·규모·2025년 하반기 정책 방향을 분석해 적합한 자금제도와 지원전략을 제안드립니다.
         </p>
       </li>
 
@@ -704,18 +724,18 @@
         </div>
         <h3 class="promise__title">ONE-STOP 프로세스</h3>
         <p class="promise__desc">
-          까다로운 절차는 없애고 필요한 서류확인과 사업장 진단을 빠르게 완료하고 자금 활용방안까지 안내드립니다.
+          복잡한 절차를 간소화해, 필요 서류 확인 → 사업장 진단 → 자금 활용방안 제시까지 한 번에 진행됩니다.
         </p>
       </li>
 
       <!-- 카드 3 -->
       <li class="promise">
         <div class="promise__icon" aria-hidden="true">
-          <img src="./img//pro003.png" alt="최대한도 자금 확보 아이콘" />
+          <img src="./img//pro003.png" alt="최적화된 자금 확보 아이콘" />
         </div>
-        <h3 class="promise__title">최대한도 자금 확보</h3>
+        <h3 class="promise__title">최적화된 자금 확보</h3>
         <p class="promise__desc">
-          기업이 가진 조건을 최대한으로 높혀, 부결확률 1.7%의 자금심사를 거쳐 목표 한도의 자금을 수령합니다.
+          기업이 가진 조건과 정책요건을 종합 분석해 최대 한도와 승인 가능성을 높이는 맞춤형 전략을 수립합니다. 
         </p>
       </li>
     </ul>
@@ -738,18 +758,18 @@
     <div class="footer__brand">
       <div class="footer__logo">
         <span class="footer__logo-en">K-Biz</span>
-        <span class="footer__logo-ko">자금지원 그룹</span>
+        <span class="footer__logo-ko">경영지원 그룹</span>
       </div>
 
       <p class="footer__slogan">
-        업종별 맞춤 최대한도& 최저금리 승인전략을 제시하는<br>
-        검증된 정책자금 컨설팅 그룹
+        업종별 한도·금리 요건을 분석해<br>
+        정책자금 활용 전략을 제시하는 전문 컨설팅 그룹
       </p>
     </div>
 
     <!-- 우측: 사업자 정보 -->
     <div class="footer__org" role="list">
-      <p class="footer__item" role="listitem"><span class="k">브랜드명</span><span class="v">K-Biz 자금지원 그룹</span></p>
+      <p class="footer__item" role="listitem"><span class="k">브랜드명</span><span class="v">K-Biz 경영지원 그룹</span></p>
       <p class="footer__item" role="listitem"><span class="k">사업자등록번호</span><span class="v">366-03-03344</span></p>
     </div>
   </div>
@@ -849,7 +869,7 @@
 
                 2. 회사는 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.<br><br>
 
-                제3자 : K-Biz자금지원그룹,중소기업비즈니스혁신센터<br>
+                제3자 : K-Biz경영지원그룹,중소기업비즈니스혁신센터<br>
                 제공하는 개인정보항목 : 이름,연락처,상호명,업종,지역 등등<br>
                 제공받는자의 이용목적 : 맞춤형 서비스 제공, 운영 업무 대행<br>
                 제공받는자의 보유 및 이용기간 : 참여일로부터 12개월<br><br>
@@ -1133,7 +1153,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!--JS파일-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!--(필수)이 제이쿼리 코드 다음에 js코드가 와야함-->
-  <script src="./js/form-fund.js"></script>
+  <script src="./js/form-fund-dang-kkjj.js"></script>
   <script src="js/validation-fund.js"></script>
   <script src="js/personal.js"></script>
   <script src="js/main.js" charset="euc-kr"></script>
@@ -1141,7 +1161,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   <script>
   $('#form').attr("name","fm");
-  $('[name="entry.1767017674"]').val("META 경기도");
+  $('[name="entry.1767017674"]').val("당근");
   $('#select_lic').css({"display":"none"});
   </script>
 
